--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.Description {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+  color: gray;
+  font-style: italic;
+  padding: 0px;
+  margin: 10px;
+  line-height: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: "Shadows Into Light", cursive;
+  font-size: 40px;
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-family: "Fuzzy Bubbles", cursive;
+  font-size: 30px;
+  margin: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Year {
+  font-family: "Architects Daughter", cursive;
+  font-size: 15px;
+  margin-top: 0px;
+  margin-left: 40px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Title {
+  font-family: "Architects Daughter", cursive;
+  font-size: 25px;
+  margin-left: 10px;
+  margin-bottom: 0px;
 }
